[package]
name = "rust-bpf-example"
version = "0.1.0"
authors = ["lwintermelon <returnhs@gmail.com>"]
edition = "2018"

[dependencies]
cty = { git="https://github.com/lwintermelon/cty" }


[profile.release]
lto = true
codegen-units = 1
# debug = true
panic = 'abort'

[profile.dev]
# There was a problem when loading if overflow-checks = true
overflow-checks = false
panic = 'abort'
