[package]
name = "rust-bpf-example"
version = "0.1.0"
authors = ["lwintermelon <returnhs@gmail.com>"]
edition = "2018"

[dependencies]
cty = { package = "aya-bpf-cty", git = "https://github.com/aya-rs/aya.git" }


[profile.release]
lto = true
codegen-units = 1
# debug = true
panic = 'abort'

[profile.dev]
overflow-checks = false
panic = 'abort'
